# mujs-feedstock

./: README.md  anaconda.yaml
recipe/: CMakeLists.txt  bld.bat  build.sh  meta.yaml
recipe/patches/: 0001-fix-python-alias.patch  make.patch  windows.patch
